start remote gui idea

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -35,6 +35,8 @@ SET(APPS ApproachTest
         ICLCartImpTest
         RightKukaTest
         TwistFollowTest
+        NewappTest
+        RemoteGUITest
 #        anotherapp
    )
 
