--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 ADD_SUBDIRECTORY(UtilModule)
 ADD_SUBDIRECTORY(TaskModule)
 ADD_SUBDIRECTORY(RobotModule)
+ADD_SUBDIRECTORY(TacModule)
 ADD_SUBDIRECTORY(ComModule)
 ADD_SUBDIRECTORY(ControllerModule)
 ADD_SUBDIRECTORY(LearningModule)
