change the threshold of contact pressure in order control the contact position/force more smoothly

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(APPS
          ApproachTest
          TipComTest
          TipServo
+         TipInfoEst
 #        CQTest
 #        KukaCartImpTest
 #        RigTFEst
