use rsb with version number

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ include_directories(${orocos_kdl_INCLUDE_DIRS})
 MESSAGE(STATUS "orocos_kdl_INCLUDE_DIR: ${orocos_kdl_INCLUDE_DIRS}")
 
 # rsb
-FIND_PACKAGE(RSB 0.12 REQUIRED HINTS ${RSB_ROOT})
+FIND_PACKAGE(RSB REQUIRED HINTS ${RSB_ROOT})
 IF(RSB_FOUND)
         INCLUDE_DIRECTORIES(${RSB_INCLUDE_DIRS})
         ADD_DEFINITIONS(${RSB_DEFINITIONS})
@@ -95,7 +95,7 @@ IF(RSB_FOUND)
 ENDIF()
 
 # rst
-FIND_PACKAGE(RST 0.12 REQUIRED sandbox HINTS ${RST_ROOT})
+FIND_PACKAGE(RST REQUIRED sandbox HINTS ${RST_ROOT})
 IF(RST_FOUND)
         INCLUDE_DIRECTORIES(${RST_INCLUDE_DIRS})
         ADD_DEFINITIONS(${RST_CFLAGS})
