--- a/src/TacModule/CMakeLists.txt
+++ b/src/TacModule/CMakeLists.txt
@@ -6,3 +6,5 @@ file(GLOB_RECURSE HEADER ./*.h)
 ADD_LIBRARY(${PROJECT_NAME} ${SOURCE})
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CORE_LIBS})
+
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
