add myrmex communication via rsb test

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -21,6 +21,8 @@ SET(APPS
          TipComTest
          TipServo
          TipInfoEst
+         tactoolservo
+         MyrmexComTest
 #        CQTest
 #        KukaCartImpTest
 #        RigTFEst
