--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -23,6 +23,7 @@ SET(APPS
          TipInfoEst
          tactoolservo
          MyrmexComTest
+         MyrmexServo
 #        CQTest
 #        KukaCartImpTest
 #        RigTFEst
