add new function with right kuka+ schunk hand, left kuka + midfingertip for fingertip servoing

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(APPS
          tactoolservo
          MyrmexComTest
          MyrmexServo
+         BiManualTipServo
 #        CQTest
 #        KukaCartImpTest
 #        RigTFEst
