use right kuka + tactool to initialize spp experiment test.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(APPS
          MyrmexComTest
          MyrmexServo
          BiManualTipServo
+         righttactoolservo
 #        CQTest
 #        KukaCartImpTest
 #        RigTFEst
