update for Isy--haptic exploration project

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(APPS
          MyrmexServo
          BiManualTipServo
          righttactoolservo
+         HapticExploring
 #        CQTest
 #        KukaCartImpTest
 #        RigTFEst
