visual fiducial marker detection via rsb

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -48,6 +48,7 @@ SET(APPS
 #        NewappTest
         RemoteGUITest
         RemoteGuiControl
+        VisMarkerComTest
 #        anotherapp
    )
 
