communicate with schunk hand in order to update schunk state. now schunk is still offline control.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -46,6 +46,7 @@ SET(APPS
 #        RightKukaTest
 #        TwistFollowTest
 #        NewappTest
+        Schunkreader
         RemoteGUITest
         RemoteGuiControl
         VisMarkerComTest
