--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ IF(NOT CMAKE_BUILD_TYPE)
 ENDIF()
 
 # some compiler flags for the different build settings
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC -std=c++0x -DQT_NO_KEYWORDS -DCBF_NDEBUG")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC -std=c++0x -DQT_NO_KEYWORDS -DCBF_NDEBUG -Wno-deprecated")
 SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
 
