add articulated object test, update kuka kinematics because remove the ft sensor, update tipservo experiment for videoshooting

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -50,6 +50,7 @@ SET(APPS
         RemoteGUITest
         RemoteGuiControl
         VisMarkerComTest
+        BiManualArticulatedObj
 #        anotherapp
    )
 
