for bimanul tip servo gui, remove schunk control button, add reba_tactile_msg
add contact postion filter
add robust detection for whether the teensy tactile output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ find_package(catkin QUIET COMPONENTS
   roscpp
   tf_conversions
   cd_dynamics
+  reba_tactile_msgs
   )
 if(catkin_FOUND)
   # declare this as a catkin package
