update myrmex servo, add FTComTest app

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -23,6 +23,7 @@ SET(APPS
          TipInfoEst
          tactoolservo
          MyrmexComTest
+         FTComTest
          MyrmexServo
          BiManualTipServo
          righttactoolservo
@@ -51,6 +52,7 @@ SET(APPS
         RemoteGuiControl
         VisMarkerComTest
         BiManualArticulatedObj
+        
 #        anotherapp
    )
 
