add FTComTest FTCalibTest and ViconTracker application

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -24,10 +24,12 @@ SET(APPS
          tactoolservo
          MyrmexComTest
          FTComTest
+         FTCalibTest
          MyrmexServo
          BiManualTipServo
          righttactoolservo
          HapticExploring
+         ViconTracker
 #        CQTest
 #        KukaCartImpTest
 #        RigTFEst
