control kuka_right + tool using new kinematic chain, rotating around axis and translation of end_effector(tool frame)

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -30,6 +30,7 @@ SET(APPS
          righttactoolservo
          HapticExploring
          ViconTracker
+         HingedToolManip
 #        CQTest
 #        KukaCartImpTest
 #        RigTFEst
