add dmp for tool's using

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ MESSAGE(STATUS "orocos_kdl_INCLUDE_DIR: ${orocos_kdl_INCLUDE_DIRS}")
 FIND_PACKAGE(RSB REQUIRED HINTS ${RSB_ROOT})
 IF(RSB_FOUND)
         INCLUDE_DIRECTORIES(${RSB_INCLUDE_DIRS})
+        MESSAGE(STATUS "RSB_INCLUDE_DIR: ${RSB_INCLUDE_DIRS}")
         ADD_DEFINITIONS(${RSB_DEFINITIONS})
         ADD_DEFINITIONS(${RSB_CFLAGS})
         LINK_DIRECTORIES(${RSB_LIBRARY_DIRS})
