--- a/src/ControllerModule/CMakeLists.txt
+++ b/src/ControllerModule/CMakeLists.txt
@@ -1,10 +1,18 @@
 PROJECT(ControllerModule)
 
+find_package(DMP QUIET)
+
+if(DMP_FOUND)
+    message(STATUS "dmp found:${DMP_INCLUDE_DIRS}")
+
+    include_directories(${DMP_INCLUDE_DIRS})
+endif()
+
 file(GLOB_RECURSE SOURCE ./*.cpp)
 file(GLOB_RECURSE HEADER ./*.h)
 
 ADD_LIBRARY(${PROJECT_NAME} ${SOURCE})
 
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CORE_LIBS})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CORE_LIBS} ${DMP_LIBRARIES})
 
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
